# clair-robotics-stack

./: pyproject.toml  requirements.txt
Adi tests/: run_tests.py  test_2.py  workspace_utils.py
clair_robotics_stack/planning/motion/: abstract_motion_planner.py  test_transofmrs.py
clair_robotics_stack/ur/lab_setup/manipulation/: manipulation_controller_2fg.py  robot_with_motion_planning.py
clair_robotics_stack/vision/: image_block_position_estimator.py  utils.py
multiagent/: README.md
multiagent/data_collection/: camera_interface.py  image_processor.py  robot_data_manager.py
multiagent/fusion/: data_fusion.py
multiagent/state_estimation/: state_manager.py  state_representation.py
multiagent/tests/: test_state_estimation.py
