[project]
name = "clair-robotics-stack"
version = "0.0.0a1"
description = ""
authors = [
    {name = "yuvalgos",email = "yuvalgos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ultralytics (>=8.3.74,<9.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "typer (>=0.15.1,<0.16.0)",
    "pyrealsense2 (>=2.55.1.6486,<3.0.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "scipy (>=1.15.1,<2.0.0)",
    "frozendict (>=2.4.6,<3.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "ur-rtde (>=1.6.0,<2.0.0)",
    "pycurl (>=7.45.4,<8.0.0)",
    "klampt (==0.10.0)",
    "freetype-py (>=2.5.1,<3.0.0)",
    "glfw (>=2.8.0,<3.0.0)",
    "numpy (==1.26.4)",
    "unified-planning[fast-downward] (>=1.2.0,<2.0.0)",
    "timeoutcontext (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
